# theoretical-neuroscience

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  todo.yml
docs/: book_map.md  decoding.md  definition_of_done.md  encoding.md  index.md  information-theory.md  neurons.md  releasing.md  spike-trains.md
examples/: README.md  bayesian_decoding.ipynb  learning_delta_rule.ipynb  place_cell_decode_1d.ipynb  plot_lif.py
src/tneuro/: __init__.py  typing.py
src/tneuro/decoding/: __init__.py  bayes.py  bayes_1d.py
src/tneuro/encoding/: glm_poisson.py  receptive_field.py  reverse_correlation.py
src/tneuro/information/: __init__.py  entropy.py  mutual_info.py
src/tneuro/learning/: __init__.py  delta_rule.py  hebbian.py  rl.py
src/tneuro/neurons/: __init__.py  lif.py  sim.py
src/tneuro/spiketrain/: __init__.py  core.py  poisson.py
src/tneuro/utils/: plot.py  random.py  validate.py
tests/decoding/: test_bayes.py
tests/encoding/: test_glm_poisson.py  test_receptive_field.py  test_reverse_correlation.py
tests/information/: test_entropy.py  test_entropy_bias.py  test_mutual_info.py
tests/learning/: test_delta_rule.py
tests/neurons/: test_lif.py
tests/spiketrain/: test_poisson.py  test_spiketrain.py
tests/utils/: test_plot.py
theoretical-neuroscience/: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
theoretical-neuroscience/.github/workflows/: publish.yml
theoretical-neuroscience/src/tneuro/: typing.py
theoretical-neuroscience/src/tneuro/information/: entropy.py  mutual_info.py
theoretical-neuroscience/tests/: test_imports.py
(+6 files in other folders)
